crates/oxc_css_parser/tests/error/at-rule/at-hyphen.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: unknown token
  ┌─ at-hyphen.css:1:5
  │
1 │ a { @-: 1px }
  │     ^
